upd index.html + add registration. html

--- a/registration.html
+++ b/registration.html
@@ -87,151 +87,56 @@
         </div>
     </header>
 
-    <main class="main">
-        <section class="new-brands">
-            <img class="new-brands__imgs" src="./img/brand_new.jpg" alt="brand_new">
-            <div class="new-brands__wrapper main-wrp">
-                <h1 class="new-brands__title">the brand<span class="new-brands__subtitle">of luxerious&nbsp;
-                        <span class="new-brands__subtitle alt-color">fashion</span></span></h1>
-            </div>
-        </section>
-        <div class="container">
-            <section class="hot-sales">
-                <h2 class="hot-sales__title visually-hidden">Sales</h2>
-                <ul class="hot-sales__list">
-                    <li class="hot-sales__item">
-                        <img class="hot-sales__item-img" src="./img/list_hotsales_1.jpg" alt="hotsales">
-                        <div class="hot-sales__item-decs">
-                            <p class="hot-sales__text">30% off</p>
-                            <h3 class="hot-sales__subtitle">for women</h3>
-                        </div>
-                    </li>
-                    <li class="hot-sales__item">
-                        <img class="hot-sales__item-img" src="./img/list_hotsales_2.jpg" alt="hotsales">
-                        <div class="hot-sales__item-decs">
-                            <p class="hot-sales__text">hot deal</p>
-                            <h3 class="hot-sales__subtitle">for men</h3>
-                        </div>
-                    </li>
-                    <li class="hot-sales__item">
-                        <img class="hot-sales__item-img" src="./img/list_hotsales_3.jpg" alt="hotsales">
-                        <div class="hot-sales__item-decs">
-                            <p class="hot-sales__text">new arrivals</p>
-                            <h3 class="hot-sales__subtitle">for kids</h3>
-                        </div>
-                    </li>
-                    <li class="hot-sales__item wide-item">
-                        <img class="hot-sales__item-img" src="./img/list_hotsales_4.jpg" alt="hotsales">
-                        <div class="hot-sales__item-decs">
-                            <p class="hot-sales__text">luxirous & trendy</p>
-                            <h3 class="hot-sales__subtitle">accesories</h3>
-                        </div>
-                    </li>
-                </ul>
-            </section>
-            <section class="featured">
-                <h2 class="featured__title">Featured Items</h2>
-                <p class="featured__text">Shop for items based on what we featured in this week</p>
-                <ul class="featured__list">
-                    <li class="featured__items">
-                        <div class="featured__active-item">
-                            <img class="featured__items-imgs" src="./img/cardlist_item1.jpg" alt="item1">
-                            <button class="featured__items-btn" type="button">Add to Cart</button>
-                            <div class="featured__items-desc">
-                                <h3 class="featured__subtitle">ellery x m'o capsule</h3>
-                                <p class="featured__items-text">Known for her sculptural takes on traditional tailoring,
-                                    Australian arbiter of cool Kym Ellery teams up with Moda Operandi.</p>
-                                <p class="featured__price">$52.00</p>
-                            </div>
-                        </div>
-                    </li>
-                    <li class="featured__items">
-                        <div class="featured__active-item">
-                            <img class="featured__items-imgs" src="./img/cardlist_item2.jpg" alt="item2">
-                            <button class="featured__items-btn" type="button">Add to Cart</button>
-                            <div class="featured__items-desc">
-                                <h3 class="featured__subtitle">ellery x m'o capsule</h3>
-                                <p class="featured__items-text">Known for her sculptural takes on traditional tailoring,
-                                    Australian arbiter of cool Kym Ellery teams up with Moda Operandi.</p>
-                                <p class="featured__price">$52.00</p>
-                            </div>
-                        </div>
-                    </li>
-                    <li class="featured__items">
-                        <div class="featured__active-item">
-                            <img class="featured__items-imgs" src="./img/cardlist_item3.jpg" alt="item3">
-                            <button class="featured__items-btn" type="button">Add to Cart</button>
-                            <div class="featured__items-desc">
-                                <h3 class="featured__subtitle">ellery x m'o capsule</h3>
-                                <p class="featured__items-text">Known for her sculptural takes on traditional tailoring,
-                                    Australian arbiter of cool Kym Ellery teams up with Moda Operandi.</p>
-                                <p class="featured__price">$52.00</p>
-                            </div>
-                        </div>
-                    </li>
-                    <li class="featured__items">
-                        <div class="featured__active-item">
-                            <img class="featured__items-imgs" src="./img/cardlist_item4.jpg" alt="item4">
-                            <button class="featured__items-btn" type="button">Add to Cart</button>
-                            <div class="featured__items-desc">
-                                <h3 class="featured__subtitle">ellery x m'o capsule</h3>
-                                <p class="featured__items-text">Known for her sculptural takes on traditional tailoring,
-                                    Australian arbiter of cool Kym Ellery teams up with Moda Operandi.</p>
-                                <p class="featured__price">$52.00</p>
-                            </div>
-                        </div>
-                    </li>
-                    <li class="featured__items">
-                        <div class="featured__active-item">
-                            <img class="featured__items-imgs" src="./img/cardlist_item5.jpg" alt="item5">
-                            <button class="featured__items-btn" type="button">Add to Cart</button>
-                            <div class="featured__items-desc">
-                                <h3 class="featured__subtitle">ellery x m'o capsule</h3>
-                                <p class="featured__items-text">Known for her sculptural takes on traditional tailoring,
-                                    Australian arbiter of cool Kym Ellery teams up with Moda Operandi.</p>
-                                <p class="featured__price">$52.00</p>
-                            </div>
-                        </div>
-                    </li>
-                    <li class="featured__items">
-                        <div class="featured__active-item">
-                            <img class="featured__items-imgs" src="./img/cardlist_item6.jpg" alt="item6">
-                            <button class="featured__items-btn" type="button">Add to Cart</button>
-                            <div class="featured__items-desc">
-                                <h3 class="featured__subtitle">ellery x m'o capsule</h3>
-                                <p class="featured__items-text">Known for her sculptural takes on traditional tailoring,
-                                    Australian arbiter of cool Kym Ellery teams up with Moda Operandi.</p>
-                                <p class="featured__price">$52.00</p>
-                            </div>
-                        </div>
-                    </li>
-                </ul>
-                <a class="featured__items-seeall" href="#">Browse All Product</a>
-            </section>
+    <main class="signup">
+        <div class="signup__wrapper main-wrp">
+            <h1 class="signup__title container">Registration</h1>
         </div>
-        <section class="our-advantage">
-            <h2 class="our-advatages__title visually-hidden">Our advantage</h2>
-            <ul class="our-advantage__list container">
-                <li class="our-advantage__item">
-                    <img class="our-advantage__item-imgs" src="./img/icon_delivery.svg" alt="freedelivery">
-                    <h3 class="our-advatages__subtitle">Free Delivery</h3>
-                    <p class="our-advatages__text">Worldwide delivery on all. Authorit tively morph next-generation
-                        innov tion with extensive models.</p>
-                </li>
-                <li class="our-advantage__item">
-                    <img class="our-advantage__item-imgs" src="./img/icon_discounts.svg" alt="discounts">
-                    <h3 class="our-advatages__subtitle">Sales & discounts</h3>
-                    <p class="our-advatages__text">Worldwide delivery on all. Authorit tively morph next-generation
-                        innov tion with extensive models.</p>
-                </li>
-                <li class="our-advantage__item">
-                    <img class="our-advantage__item-imgs" src="./img/icon_royalquality.svg" alt="quality">
-                    <h3 class="our-advatages__subtitle">Quality assurance</h3>
-                    <p class="our-advatages__text">Worldwide delivery on all. Authorit tively morph next-generation
-                        innov tion with extensive models.</p>
-                </li>
-            </ul>
-        </section>
+        <div class="signup__field container">
+            <form action="#">
+                <fieldset>
+                    <legend class="visually-hidden">Your Name</legend>
+                    <div class="form__field-username">
+                        <label for="field-username" class="visually-hidden">First Name</label>
+                        <input id="field-username" type="text" placeholder="First Name">
+                    </div>
+                    <div class="form__field-usersurname">
+                        <label for="field-usersurname" class="visually-hidden">Last Name</label>
+                        <input id="field-usersurname" type="text" placeholder="Last Name">
+                    </div>
+                    <div class="form__field-usergender">
+                        <input id="gender-male" type="radio" name="checkgender" value="1">
+                        <label for="gender-male">Male</label>
+                        <input id="gender-female" type="radio" name="checkgender" value="2">
+                        <label for="gender-female">Female</label>
+                    </div>
+                    <legend class="visually-hidden">Login details</legend>
+                    <div class="form__field-usermail">
+                        <label for="field-useremail" class="visually-hidden">Email</label>
+                        <input id="field-useremail" type="email" placeholder="Email">
+                    </div>
+                    <div class="form__field-userpass">
+                        <label for="field-userpass" class="visually-hidden">Password</label>
+                        <input id="field-userpass" type="password" placeholder="Password">
+                    </div>
+                </fieldset>
+                <p class="">Please use 8 or more characters, with at least 1 number and a mixture of uppercase and
+                    lowercase letters</p>
+                <button class="" type="submit">Join Now</button>
+            </form>
+            <div>
+                <h2>Loyalty has its perks</h2>
+                <p>Get in on the loyalty program where you can earn points and unlock serious perks. Starting with these
+                    as
+                    soon as you join:</p>
+                <ul>
+                    <li>15% off welcome offer</li>
+                    <li>Free shipping, returns and exchanges on all orders</li>
+                    <li>$10 off a purchase on your birthday</li>
+                    <li>Early access to products</li>
+                    <li>Exclusive offers & rewards</li>
+                </ul>
+            </div>
+        </div>
     </main>
 
     <footer class="footer">
@@ -268,5 +173,3 @@
         </div>
     </footer>
 </body>
-
-</html>
