product.html with bootstrap + some fixes

--- a/registration.html
+++ b/registration.html
@@ -5,7 +5,6 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./css/style.css">
     <title>Document</title>
 </head>
@@ -89,8 +88,11 @@
     </header>
 
     <main class="signup">
-        <div class="signup__wrapper main-wrp">
-            <h1 class="signup__title container">Registration</h1>
+        <div class="head-miniwrapper main-wrp">
+            <div class="alignwrp">
+                <h1 class="signup__title">Registration</h1>
+                <p class="alignwrp__hc">_</p>
+            </div>
         </div>
         <div class="signup__field container">
             <form class="signup__form" action="#">
